--- a/index.html
+++ b/index.html
@@ -93,6 +93,24 @@
             cursor: pointer;
             display: none;
         }
+        @media screen and (max-width:500px){
+            .main{
+                height: 300px;
+                width: 300px;
+            }
+            .box{
+                height: 85px;
+                width: 85px;
+            }
+            .awin, .bwin{
+                width: 400px;
+                height: 90px;
+                top: 40%;
+                left: 0;
+                font-size: 40px;
+
+            }
+        }
     </style>
 </head>
 <body>
